<?xml version="1.0"?>
<package format="2">
  <name>pr2_controller_tutorials</name>
  <version>0.0.0</version>
  <description>The pr2_controller_tutorials package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="iman@todo.todo">iman</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>pr2_controller_interface</build_depend>
  <build_depend>pr2_mechanism_model</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>std_srvs</build_depend>

  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>pr2_controller_interface</build_export_depend>
  <build_export_depend>pr2_mechanism_model</build_export_depend>
  <build_export_depend>std_srvs</build_export_depend>

  <exec_depend>pluginlib</exec_depend>
  <exec_depend>pr2_controller_interface</exec_depend>
  <exec_depend>pr2_mechanism_model</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <build_depend>controller_interface</build_depend>
  <exec_depend>controller_interface</exec_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <pr2_controller_interface plugin="${prefix}/controller_plugin.xml" /> 
  </export>
</package>
